# exercicios-faculdade

./: LICENSE  excel_file23.xlsx  excel_file24.xlsx  excel_file3.xlsx  excel_file30.xlsx  excel_file43.xlsx  excel_file5.xlsx  excel_file7.xlsx  new_excel.xls
CppFrame/: Entity.cpp  Entity.hpp  Frame.cpp  Frame.hpp  Particle.cpp  Particle.hpp  Physics_system.cpp  Vec.cpp  Vec.hpp  _run.sh  a.out  ascii_drawing.cpp  main.cpp  serpinski.cpp
CppRNG/: CMakeLists.txt  Champions.cpp  Champions.h  Champions.hpp  CppRNG.cpp  main.cpp  rng.ipynb  saveChampions.sav
OBI/: a.out  calorias.cpp  candidatas.cpp  dataStructures.py  dijkstra_algorithm.ipynb  out  passatempo.ipynb  passatempo2.ipynb  rede.cpp  retangulo.ipynb  sanduiche.ipynb  starteck.c  startrek_in_2  tenis.cpp  tenis.ipynb  teste.cpp
allegro_interface/: Display.cpp  Display.h  Interface.cpp  Interface.h  Keyboard.h  Shape.cpp  Shape.h  Timer.cpp  Timer.h  Timer_Vector.cpp  Timer_Vector.h  __run__.sh  _out_  allegro_depends.h  app.cpp  bitmap.cpp  bitmap.h  entity.cpp  entity.h  linear_algebra.cpp  linear_algebra.h  test_app_interface.cpp  test_app_interface.h  test_entity_inheritance.cpp  test_entity_inheritance.h
avaliacao001/: ex001.c  ex003.c
avaliacoes/: EdubotProject.cpp
c_cpp_studies/: DATA.csv  HelloWorld.cs  donut.cpp  out  scidavis.c  scidavis2.c
nevermind/: CMakeLists.txt  allegro.hpp  allegro_interface.cpp  allegro_interface.hpp  app_controller.cpp  app_controller.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  entity.hpp  graphics.cpp  graphics.hpp  main.cpp  out  run.sh
(+755 files in other folders)
